# digo_authenticator_app

./: README.md  pubspec.yaml
.github/workflows/: build_windows.yml
lib/: main.dart
lib/core/di/: di.dart
lib/core/localization/: app_localizations.dart
lib/core/routing/: router.dart
lib/core/security/: database_service.dart  encryption_service.dart  otp_service.dart  qr_decoder_service.dart  secure_storage_service.dart
lib/core/theme/: theme.dart
lib/features/authenticator/data/repositories/: authenticator_repository_impl.dart
lib/features/authenticator/domain/models/: otp_account.dart
lib/features/authenticator/domain/repositories/: authenticator_repository.dart
lib/features/authenticator/presentation/providers/: auth_provider.dart  authenticator_provider.dart
lib/features/authenticator/presentation/screens/: account_detail_screen.dart  add_account_screen.dart  home_screen.dart  lock_screen.dart  scan_qr_screen.dart  screen_snip_overlay.dart
lib/features/backup/data/services/: backup_service.dart
lib/features/backup/presentation/screens/: backup_screen.dart
lib/features/settings/presentation/providers/: settings_provider.dart
lib/features/settings/presentation/screens/: settings_screen.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/ephemeral/: generated_config.cmake
windows/runner/: Runner.rc  main.cpp  win32_window.cpp
